# webGPU_cpp

./: .gitignore  CMakeLists.txt  README.md  ResourceManager.cpp  ResourceManager.h  main.cpp  notes.md  webgpu-utils.cpp  webgpu-utils.h
resources/: compute-shader.wgsl  shader.wgsl
